--- a/src/app/demotable/demotable.component.html
+++ b/src/app/demotable/demotable.component.html
@@ -1,20 +1,65 @@
 <div class="row d-grid gap-1 d-md-block d-md-flex justify-content-md-start m-5 bg-body rounded">
-    <!-- <div class="colorheader p-1 border rounded topnav2">
+    <div class="colorheader p-1 border rounded topnav2">
         <div class="d-grid gap-1 d-md-block d-md-flex justify-content-md-center ">
-            <h2>Consignee For GeM Dashboard</h2>
+            <h2>CAR SALES</h2>
         </div>
-    </div> -->
+    </div>
     <div class="m-1" style="background: rgb(221, 248, 255);border-radius: 25px;">
-        <div class="m-2" style=" text-align: center;">
-            <h2 class="titlehead" style="font-size: 17px !important;background: #004a9f;border-radius: 10px; 
-            background: linear-gradient(to right,  #3ba4c4,#002b5c,#3ba4c4);
-            color: white;"> CAR SALES DATA
-            </h2>
-        </div>
+
+
+        <div class="row g-1 m-1">
+            <div class="row g-1 border border-info rounded-end shadow-sm p-2 mb-3 bg-body mt-4">
+                <div class="col-md-3">
+                    <div class="col-sm-8">
+                        
+                        <mat-form-field appearance="fill">
+                            <mat-label>Search here</mat-label>
+                            <input matInput (keyup)="applyFilter($event)">
+                          </mat-form-field>
+                    </div>
+                </div>
+            </div>
+
+            <table mat-table [dataSource]="dataSourceTableData" matSort>
+
+                <ng-container matColumnDef="Manufacturer">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="background-color: lightblue;">
+                        Manufacturer </th>
+                    <td mat-cell *matCellDef="let element"> {{element.Manufacturer}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="Model">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="background-color: lightblue;"> Model
+                    </th>
+                    <td mat-cell *matCellDef="let element"> {{element.Model}} </td>
+                </ng-container>
+                <ng-container matColumnDef="four_year_resale_value">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="background-color: lightblue;"> Four year resale value
+                    </th>
+                    <td mat-cell *matCellDef="let element"> {{element.four_year_resale_value}} </td>
+                </ng-container>
+                <ng-container matColumnDef="Sales_in_thousands">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="background-color: lightblue;"> Sales In Thousands
+                    </th>
+                    <td mat-cell *matCellDef="let element"> {{element.Sales_in_thousands}} </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColums"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColums"></tr>
+                
+            </table>
+            <!-- <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20, 50]" class="mat-elevation-z5"
+                  [showFirstLastButtons]=true style="background-color: #ffffff;"></mat-paginator>
+          -->
+
 
         
 
-        <table mat-table [dataSource]="dataSourceTableData"
+    </div>
+</div>
+
+
+<!-- <table mat-table [dataSource]="dataSourceTableData"
                     class="mat-elevation-z8">
 
                     <ng-container matColumnDef="Manufacturer">
@@ -49,10 +94,4 @@
                     <tr class="mat-row" *matNoDataRow>
                         <td class="mat-cell" colspan="16">No Records found</td>
                     </tr>
-                </table>
-  
-
-
-    </div>
-
-</div>
+                </table> -->
