--- a/src/app/demotable/demotable.component.html
+++ b/src/app/demotable/demotable.component.html
@@ -12,7 +12,7 @@
                 <div class="col-md-3">
                     <div class="col-sm-8">
                         
-                        <mat-form-field appearance="fill">
+                        <mat-form-field appearance="fill" style="align-tracks: right;">
                             <mat-label>Search here</mat-label>
                             <input matInput (keyup)="applyFilter($event)">
                           </mat-form-field>
