--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,249 @@ html, body { height: 100%;
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+/* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.topnav {
+    overflow: hidden;
+    background:linear-gradient(to right, rgb(187, 253, 255),rgb(13, 135, 192))
+  }
+  
+  .topnav2 {
+    overflow: hidden;
+    text-align: center;
+    background:linear-gradient(to right, rgb(3, 36, 51),rgb(69, 144, 179), rgb(3, 37, 53));
+    display: block;
+    padding: 8px;
+    color: #023b5c;
+    text-align: center;
+    text-decoration: none;
+    font-size: 20px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: rgb(255, 255, 255);
+    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;  }
+  
+  .topnav a {
+    float: right;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 12px;
+    text-decoration: none;
+    font-size: 17px;
+    font-family: courier new;
+    font-weight: bold;
+  }
+  
+  .topnav a:hover {
+    background-color: #ffffff;
+    color: rgb(34, 126, 168);
+  }
+  
+  .topnav a.active {
+    background-color: #013741;
+    color: white;
+  }
+  
+  .topnav .icon {
+    display: none;
+  }
+
+  img {
+    border-radius: 4px;
+    padding: 5px;
+    width: 150px;
+  }
+  
+  .right-lnk {
+     float: right;
+  }
+  
+.fade-in-image { 
+  /* animation: fadeIn 3s;  */
+  margin-top: 10px;
+  background-color: rgb(221, 248, 255);
+  margin: 20px;
+  border-radius: 10px;
+  box-shadow: 5px 10px 18px #888888;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 95%;
+}
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+.titlehead { 
+  font-size: 17px !important;
+  background: #004a9f;
+  border-radius: 10px; 
+  background: linear-gradient(to right,  #3ba4c4,#002b5c,#3ba4c4);
+  color: white;
+}
+
+.subbtn{
+  background-color: rgb(6, 35, 59);
+  color:aliceblue; 
+}
+.prevNextbtn{
+  background-color: rgb(4, 48, 33);
+  color:aliceblue; 
+}
+.cnclbtn{
+  background-color: rgb(145, 196, 238);
+  color:rgb(0, 0, 0); 
+}
+.aplbtn{
+  background-color: rgb(39, 81, 114);
+  color:aliceblue; 
+}
+.bckbtn{
+  background-color: rgb(188, 191, 231);
+  color:rgb(0, 0, 0); 
+}
+.nxtbtn{
+  background-color: rgb(146, 215, 236);
+  color:rgb(0, 0, 0); 
+}
+.nextbtn{
+  background-color: rgb(53, 137, 185);
+  color:rgb(0, 0, 0); 
+}
+.srchbtn{
+  background-color: rgb(23, 121, 128);
+  color:rgb(255, 255, 255); 
+}
+
+.updatebtn{
+  background-color: rgb(6, 59, 9);
+  color:aliceblue; 
+}
+
+.newbtn{
+  background-color: #d0b8db;
+  color:black; 
+}
+
+.form-control{
+  margin-top: 1px !important;
+}
+/* .form-control{
+  box-shadow: 1px 5px 7px #afafaf;
+  height: 25px !important;
+  margin-top: -6px;
+}
+.input {
+  padding: 0px 0px 0px 0px; 
+}
+
+
+.h-divider {
+  margin: auto;
+  margin-top: 80px;
+  width: 80%;
+  position: relative;
+}
+
+.h-divider .shadow {
+  overflow: hidden;
+  height: 20px;
+} */
+
+.row {
+  margin-left: 20px !important;
+}
+.topnav3 {
+  margin: 10px;
+  overflow: hidden;
+  text-align: center;
+  background:linear-gradient(to right, rgb(0, 154, 165),rgb(1, 43, 43), rgb(5, 146, 127));
+  display: block;
+  padding: 3px;
+  color: #023b5c;
+  text-align: center;
+  text-decoration: none;
+  font-size: 15px;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  color: rgb(255, 255, 255);
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;  
+  width: 100%;
+  height: 25px;
+}
+
+.form-popup { 
+  position: fixed;
+  bottom: 0; 
+  z-index: 99;  
+  width: 70%;
+  top: 250px;
+  left: 120px;
+  right: 5px;
+  height: 45% !important; 
+  overflow-y:auto;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.8);
+  z-index: 99999999999;
+  background-color: #ffffff;
+}
+
+ 
+ 
+.mat-cell{
+  font-size:12px;
+  font-family: Verdana,Sans-Serif;
+  display: table-cell;
+  height: 10px;
+  vertical-align: middle;
+  border-bottom: 0.1px solid rgba(0, 0, 0, 0.12);
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
+  border-left: 1px solid rgba(0, 0, 0, 0.12);
+  border-right: 1px solid rgba(0, 0, 0, 0.12);
+  }
+
+  .mat-header-cell{
+  background-color: beige;
+  color: black;
+  font-weight: 500;
+  font-size: 14px;
+  justify-content: center;
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+  border-left: 2px solid rgba(0, 0, 0, 0.12);
+  border-right: 2px solid rgba(0, 0, 0, 0.12);
+  }
+
+
+  .mat-row:nth-child(even){background-color: #f2f2f2;}
+
+  ::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background {
+    background-color: rgb(13, 98, 168)  !important;
+  }
+
+  
+  .required-asterisk{
+    color:red;
+  }
+
+  .generatebtn{
+    background-color: rgb(41, 197, 189);
+    color:black; 
+  }
+  
+  .objectToCust{
+    background-color: rgb(88, 4, 63);
+    color:aliceblue; 
+  }
+  
+  .sendForApproval{
+    background-color: rgb(4, 114, 63);
+    color:aliceblue; 
+  }
+
+  .aplbtn{
+    background-color: rgb(39, 81, 114);
+    color:aliceblue; 
+  }
