--- a/src/app/sidenavbar/sidenavbar.component.html
+++ b/src/app/sidenavbar/sidenavbar.component.html
@@ -1,32 +1,29 @@
 <mat-toolbar>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="collapsed.set(!collapsed())">
-      <mat-icon>menu</mat-icon>
-    </button>
-   
-    <span class="example-spacer" class="header-text">Dashboard</span>
-    
-  </mat-toolbar>
-  <mat-sidenav-container class="main-container">
-    <mat-sidenav opened mode="side" [style.width]="sidenavwith()" >
-    <div  class="sidenavbar-header">
-        <img class="img" [width]="logo()" [height]="logo()"src="assets/ey.png">
-        <div class="header-text" [class.hide-header-text]="sidnavcollapsed()">
-            <h2>ERNST & YOUNG</h2>
-        </div>
-    </div>
+  <button mat-icon-button aria-label="Menu icon" (click)="toggleMenu()">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span class="example-spacer" class="header-text">Menu</span>
+</mat-toolbar>
+
+<mat-sidenav-container class="main-container" autosize>
+  <mat-sidenav [ngClass]="isCollapsed ? 'notexpanded' : 'expanded'" [mode]="isMobile ? 'over' : 'side'"
+    [opened]="isMobile ? 'false' : 'true'">
     <mat-nav-list>
-        
-            <a mat-list-item *ngFor="let item of menuItems()" [routerLink]="item.route">
-                <mat-icon  [ngStyle]="{'color':'white'}" matListItemIcon>{{item.icon}}</mat-icon>
-                <span matListItemTitle class="label-color">{{item.label}}</span>
-            </a>
-            
+      <img mat-list-item [ngClass]="isCollapsed ? 'imgnotexpanded' : 'img'" src="assets/ey.png">
+      <div class="header-text">
+        <h2 *ngIf="!isCollapsed">ERNST & YOUNG</h2>
+      </div>
     </mat-nav-list>
-    </mat-sidenav>
-  
-  <mat-sidenav-content class="content" [style.margin-left]="sidenavwith()">
-<router-outlet></router-outlet>
+
+    <mat-nav-list>
+      <a mat-list-item *ngFor="let item of menuItems()" [routerLink]="item.route">
+        <mat-icon [ngStyle]="{'color':'white'}" matListItemIcon>{{item.icon}}</mat-icon>
+        <span matListItemTitle class="label-color" *ngIf="!isCollapsed">{{item.label}}</span>
+      </a>
+    </mat-nav-list>
+  </mat-sidenav>
+
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
-  
-  
