--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -1,14 +1,14 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
     <h1>
-      Welcome to use ngx-echarts!
+      SALES DATA
     </h1>
   </div>
   
   
   
   
-  <h3>Easy to update data asynchronous: <button (click)="getData()" style="padding: 0.5em;">Get Data</button></h3>
+  <h3><button (click)="getData()" style="padding: 0.5em;">Get Data</button></h3>
   <div echarts [options]="options" [merge]="mergeOption" [loading]="loading" class="chart"></div>
  <div>
   
