--- a/src/app/demo2/demo2.component.html
+++ b/src/app/demo2/demo2.component.html
@@ -1,4 +1,15 @@
+<div class="parent">
+  <h1>ICE CREAM SALES </h1>
+  <div class="child">
+    <ag-charts
+    style="height: 100%"
+    [options]="chartOptions">
+   </ag-charts>
+  <div class="child">
 
-<div>
-    <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'360px'}"></canvasjs-chart>    
-  </div> 
+    <ag-charts
+    
+    [options]="chartoptions"
+  ></ag-charts>
+
+  </div>
