--- a/src/app/demotable/demotable.component.scss
+++ b/src/app/demotable/demotable.component.scss
@@ -1,38 +1,4 @@
-.topnav2 {
-    overflow: hidden;
-    text-align: center;
-    background:linear-gradient(to right, rgb(3, 36, 51),rgb(69, 144, 179), rgb(3, 37, 53));
-    display: block;
-    padding: 8px;
-    color: #023b5c;
-    text-align: center;
-    text-decoration: none;
-    font-size: 20px;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: rgb(255, 255, 255);
-    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;  }
-  
-  .topnav a {
-    float: right;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 12px;
-    text-decoration: none;
-    font-size: 17px;
-    font-family: courier new;
-    font-weight: bold;
-  }
- 
-  
-  td, th {
-    border: 1px solid #ddd;
-    padding: 8px;
-  }
-  
-  th {
-    text-align: left;
-  }
-
-  
+.row{
+  padding-bottom: 100px;
+}
 
