--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -8,7 +8,7 @@
   
   
   
-  <h3><button (click)="getData()" style="padding: 0.5em;">Get Data</button></h3>
+  <h3><button (click)="getData()" style="padding: 0.5em;" >Generate Random Data</button></h3>
   <div echarts [options]="options" [merge]="mergeOption" [loading]="loading" class="chart"></div>
  <div>
   
