--- a/src/app/charttable/charttable.component.scss
+++ b/src/app/charttable/charttable.component.scss
@@ -8,7 +8,7 @@
     padding: 20px;
   }
   .ag-theme-quartz {
-    --ag-header-background-color: lightblue;
+    --ag-header-background-color: rgb(99, 103, 205);
     --ag-header-foreground-color: black;
 }
 
