--- a/src/app/sidenavbar/sidenavbar.component.scss
+++ b/src/app/sidenavbar/sidenavbar.component.scss
@@ -116,8 +116,8 @@ mat-sidenav-content{
   filter: contrast(3)
 }
 .selected-item {
-  background-color: #04122b; /* Adjust the background color as needed */
-  color: whitesmoke;
+  background-color: #7097dc; /* Adjust the background color as needed */
+  color: rgb(58, 4, 165);
   
 
 }
