--- a/src/app/demo2/demo2.component.html
+++ b/src/app/demo2/demo2.component.html
@@ -1,15 +1,18 @@
-<div class="parent">
-  <h1>ICE CREAM SALES </h1>
+<h1>ICE CREAM SALES </h1>
+<div  class="parent">
+
   <div class="child">
     <ag-charts
     style="height: 100%"
     [options]="chartOptions">
    </ag-charts>
+  </div>
   <div class="child">
 
     <ag-charts
-    
+    style="height: 100%"
     [options]="chartoptions"
   ></ag-charts>
 
   </div>
+</div>
