--- a/src/app/demotable/demotable.component.scss
+++ b/src/app/demotable/demotable.component.scss
@@ -1,4 +1,31 @@
-.row{
-  padding-bottom: 100px;
-}
 
+  .container {
+    max-width: 400px; /* Adjust as needed */
+    margin: 20px auto; 
+  }
+
+  .bg-light {
+    background-color:lightblue; 
+  }
+
+  .rounded {
+    border-radius: 5px; 
+  }
+
+  .p-3 {
+    padding: 1rem; 
+  }
+
+  label {
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+
+  .form-select {
+    border: 1px solid #ced4da; 
+    border-radius: 3px; 
+    padding: 0.375rem 0.75rem; 
+    font-size: 0.875rem; 
+    line-height: 1.5; 
+    background-color: #fff; 
+  }
